examples/bad/hold_index_after_move.mko
// Must fail: indexing a hold array consumes it.
fn main() {
    hold let xs = [1, 2, 3]
    print_int(xs[0])
    print_int(xs[1])
}
